# Hayari

./: CMakeLists.txt  Hayari.pro  README.md  vcpkg.json
inc/: BrowseWindow.hpp  MainWindow.hpp
inc/Engine/: SearchEngine.hpp
inc/Render/: ARenderer.hpp
inc/Render/Impl/: BuiltinRenderer.hpp  DebugRenderer.hpp
src/: BrowseWindow.cpp  MainWindow.cpp  main.cpp
src/Engine/: SearchEngine.cpp
src/Render/Impl/: BuiltinRenderer.cpp  DebugRenderer.cpp
